Issue 5384: cutoff permissions matrix

--- a/core/modules/user/css/user.css
+++ b/core/modules/user/css/user.css
@@ -24,6 +24,11 @@
 #user-admin-settings .min-length-wrapper {
   font-size: 0.923em;
 }
+#user-admin-permissions,
+#edit-permissions > .fieldset-wrapper > .form-item,
+#edit-permissions-wrapper > .fieldset-wrapper > .form-item {
+  overflow-x: auto;
+}
 
 /**
  * Password toggle.
